--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="en-US">
   <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="widthdevice-width,scale=1.0" />
+    <link href="/style.css" rel="stylesheet" type="text/css" />
     <title>Sumesh</title>
   </head>
   <body>
-    hello world!
+    <div class="bg-gradient">hello world!</div>
   </body>
 </html>
