--- a/index.html
+++ b/index.html
@@ -3,13 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <link href="/style.css" rel="stylesheet" type="text/css" />
-    <link href="/reset.css" rel="stylesheet" type="text/css" />
     <title>Heduxw's Portfolio</title>
   </head>
   <body>
-<<<<<<< HEAD
-    just testing
-=======
->>>>>>> d2542376d5e5a6ff80e1701b59492f6efa7cb48e
+    Hello world!!!
   </body>
 </html>
