--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8" />
     <link href="/style.css" rel="stylesheet" type="text/css" />
     <title>Heduxw's Portfolio</title>
+    <style>
+body {
+  background-color: #fefbd8;
+}
+</style>
   </head>
   <body>
     Hello world!!!
